# SuperMIPS

./: Cargo.toml  README.md  test.asm  test.data
docs/: instructions.md  memory.md  syscalls.md
example_games/: bouncy.asm
src/: core.rs  errors.rs  main.rs  memory.rs  syscalls.rs  wasm.rs.bkup
